tests/baselines/reference/constDeclarations2.errors.txt
tests/cases/compiler/constDeclarations2.ts(4,5): error TS1158: Only var declarations can be exported.
tests/cases/compiler/constDeclarations2.ts(5,5): error TS1158: Only var declarations can be exported.
tests/cases/compiler/constDeclarations2.ts(6,5): error TS1158: Only var declarations can be exported.


==== tests/cases/compiler/constDeclarations2.ts (3 errors) ====
    
    // No error
    module M {
        export const c1 = false;
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1158: Only var declarations can be exported.
        export const c2: number = 23;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1158: Only var declarations can be exported.
        export const c3 = 0, c4 :string = "", c5 = null;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1158: Only var declarations can be exported.
    }
    